--- a/templates/service.html
+++ b/templates/service.html
@@ -111,7 +111,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="index.html" class="back-btn">
+            <a href="/" class="back-btn">
                 <i class="fas fa-arrow-left"></i> Back to Home
             </a>
         </div>
